Добавлен заголовок H2 в шаблон электронной почты

--- a/email.html
+++ b/email.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html dir="ltr" lang="ru"><head><meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/><style>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html dir="ltr" lang="ru"><h2>Hello, World!</h2><head><meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/><style>
     @font-face {
       font-family: ''Roboto', 'Verdana', sans-serif';
       font-style: normal;
